2020-09-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Adrian Klieber:
	patch #9818: correct typos in SVN rev 1429
	* buspirate.c: Fix typos.
	* fileio.c: Fix typos.
	* jtagmkII.c: Fix typos.
	* main.c: Fix typos.
	* term.c: Fix typos.
	* usbasp.c: Fix typos.
	* usbtiny.h: Fix typos.

2020-09-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Adrian Klieber:
	patch #9820: Fix some out-of-bounds/uninitialized issues
	* stk500v2.c (stk500v2_display): fix uninitialized variables
	* stk500v2.c (stk500v2_set_sck_period_mk2): fix loop limits
	* pickit2.c (pickit2_open): Use pgm->desc to store description (WIN32 only)
	* config_gram.y (K_PAGE_SIZE): ensure page_size is > 0
	* avrpart.c (avr_new_memtype): initialize page_size to 1

2020-09-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* config_gram.y (K_DESC): Enforce correct length in strncpy()
	* config_gram.y (K_MEMORY): (Dito.)

2020-09-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrpart.c (avr_new_memtype): ensure page_size is at least 1
	* config_gram.y (K_PAGE_SIZE): (Dito.)

2020-03-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Adrian Klieber:
	patch #9819: Address several leaks in SVN rev 1429
	* config.c: Fix potential memory leak
	* jtagmkII.c: (Dito.)
	* stk500v2.c: (Dito.)
	* update.c: (Dito.)
	* windows/loaddrv.c: Fix file descriptor leak.

2020-03-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by: kautism
	patch #9893: [PATCH] Reader reads ftdi handle after main thread close it
	* ft245r.c: Wait until reader thread has been stopped before closing FTDI

2020-03-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix compiler warnings
	* avr.c: misleading indentation after spin loop
	* fileio.c: EM_AVR32 might be defined in system <libelf.h>